--- a/web/templates/adminbase.html
+++ b/web/templates/adminbase.html
@@ -157,7 +157,7 @@
 
     <nav class="sidebar" id="sidebar">
         <div class="logo">
-            <img src="{% static 'img/cdac_logo.png' %}" alt="Logo">
+            <img src="{% static 'img/add_logo.png' %}" alt="Logo">
         </div>
         <ul>
             {% if request.user.id == 1 %}
